--- a/css/custom.css
+++ b/css/custom.css
@@ -10,3 +10,18 @@
 #about-me > section.section-parallax a {
     color: #fff !important;
 }
+
+/* Make bullet points in work experience match header color */
+#experience .custom-list-style-1 li {
+    position: relative;
+    padding-left: 1.5em;
+}
+#experience .custom-list-style-1 li::before {
+    content: '\2022';
+    position: absolute;
+    left: 0;
+    color: #232323;
+    font-weight: bold;
+    font-size: 1.2em;
+    top: 0.1em;
+}
