--- a/css/custom.css
+++ b/css/custom.css
@@ -25,3 +25,19 @@
     font-size: 1.2em;
     top: 0.1em;
 }
+
+/* Custom bullets for project descriptions in Technical Projects section */
+#portfolio .custom-box-details ul li {
+    position: relative;
+    padding-left: 1.5em;
+    margin-bottom: 0.3em;
+}
+#portfolio .custom-box-details ul li::before {
+    content: '\2022';
+    position: absolute;
+    left: 0;
+    color: #1a2330;
+    font-weight: bold;
+    font-size: 1.1em;
+    top: 0.1em;
+}
